[project]
name = "pomo"
version = "1.1.0"
description = "Fancy CLI pomodoro timer in python"
authors = [
    {name = "dario-loi", email = "dario13.loi@gmail.com"},
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.7.0",
    "plyer>=2.1.0",
    "dbus-python>=1.3.2",
    "playsound @ git+https://github.com/taconi/playsound",
    "pygobject>=3.46.0",
    "types-playsound>=1.3.1.3",
    "ruff>=0.1.11",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
pomo-timer = "src/pomo/pomo.py"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
